// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`condenseReadings() should combine multiple readings with same characters 1`] = `
Array [
  Object {
    "character": "近々",
    "furigana": "0:きんきん",
    "kana": Array [
      "きんきん",
      "ちかじか",
      "ちかぢか",
    ],
  },
]
`;

exports[`condenseReadings() should have a safe default 1`] = `Array []`;

exports[`condenseReadings() should not fail with unrelated readings 1`] = `
Array [
  Object {
    "character": "近々",
    "furigana": "0:きんきん",
    "kana": Array [
      "きんきん",
      "ちかじか",
      "ちかぢか",
    ],
  },
  Object {
    "character": "売り上げ",
    "kana": Array [
      "うりあげ",
    ],
  },
]
`;

exports[`condenseReadings() should pass when only one reading 1`] = `
Array [
  Object {
    "character": "売り上げ",
    "kana": Array [
      "うりあげ",
    ],
  },
]
`;

exports[`condenseReadings() should pass when readings were already condensed 1`] = `
Array [
  Object {
    "character": "近々",
    "furigana": "0:きんきん",
    "kana": Array [
      "きんきん",
      "ちかじか",
      "ちかぢか",
    ],
  },
]
`;

exports[`condenseReadings() should re-order primary reading to start 1`] = `
Array [
  Object {
    "character": "近々",
    "furigana": "0:きんきん",
    "kana": Array [
      "きんきん",
      "ちかじか",
      "ちかぢか",
    ],
  },
]
`;

exports[`condenseReadings() should work with mixed edge cases 1`] = `
Array [
  Object {
    "character": "ハート形",
    "kana": Array [
      "ハートがた",
    ],
  },
  Object {
    "character": "フランス人",
    "kana": Array [
      "ふらんすじん",
    ],
  },
  Object {
    "character": "迷惑メール",
    "kana": Array [
      "めいわくメール",
    ],
  },
  Object {
    "character": "烏龍茶",
    "kana": Array [
      "ウーロンちゃ",
    ],
  },
  Object {
    "character": "缶ビール",
    "kana": Array [
      "かんビール",
    ],
  },
]
`;

exports[`condenseReadings() should work with only kana 1`] = `
Array [
  Object {
    "character": "そろそろ",
    "kana": Array [
      "そろそろ",
    ],
  },
  Object {
    "character": "マンコ",
    "kana": Array [
      "マンコ",
    ],
  },
]
`;

exports[`condenseReadings() should work with prefixes 1`] = `
Array [
  Object {
    "character": "〜漬け",
    "kana": Array [
      "づけ",
    ],
  },
  Object {
    "character": "〜才",
    "kana": Array [
      "さい",
    ],
  },
]
`;

exports[`condenseReadings() should work with suffixes 1`] = `
Array [
  Object {
    "character": "各〜",
    "kana": Array [
      "かく",
    ],
  },
]
`;
